Updated route code with latest OpenAI apis. Minor CSS and HTML chgs

--- a/intro_to_flask/static/css/main.css
+++ b/intro_to_flask/static/css/main.css
@@ -31,6 +31,11 @@ header h1.logo:hover {
 
 /* Center the body content */
 
+.container {
+  width: 1100px;
+  margin: 0 auto;
+}
+
 .container-flex {
   width: 1200px;
   margin: 0 auto;
