--- a/intro_to_flask/templates/askme.html
+++ b/intro_to_flask/templates/askme.html
@@ -4,8 +4,8 @@
 <h2>Ask me</h2>
 
 {% if success %}
-<p> You asked me:  "{{ask_me_prompt}}"".  </p>
-<p> Here's your answer:  {{ask_me_response}}  </p>
+<p> <b> You asked me:  </b> "{{ask_me_prompt}}"".  </p>
+<p> <b> Here's your answer:  </b> {{ask_me_response}}  </p>
 {% else %}  
 {% for prompt in form.prompt.errors %}
 <div class="flash">{{ prompt }}</div>
