--- a/intro_to_flask/templates/transcribeme.html
+++ b/intro_to_flask/templates/transcribeme.html
@@ -5,8 +5,8 @@
 
 {% if success %}
 <!-- You fill in the variables in the two statements below-->
-<p> <b> You gave me: </b> "".  </p>
-<p> <b>Here's your transcription: </b>     </p>
+<p> <b> You gave me:  </b> "{{transcribe_me_prompt}}".  </p>
+<p> <b>Here's your transcription:  </b> {{transcribe_me_response}}   </p>
 {% else %}  
 {% for prompt in form.prompt.errors %}
 <div class="flash">{{ prompt }}</div>
