Copied and modified drawme files for speakme.  Still need routes and api

--- a/intro_to_flask/templates/layout.html
+++ b/intro_to_flask/templates/layout.html
@@ -17,6 +17,7 @@
           <li><a href="{{ url_for('askme') }}">Ask Me</a></li>
           <li><a href="{{ url_for('drawme') }}">Draw Me</a></li>
           <li><a href="{{ url_for('transcribeme') }}">Transcribe Me</a></li>
+          <li><a href="{{ url_for('speakme') }}">Speak Me</a></li>
 
         </ul>
       </nav>
