Increase text field size for prompt & remove response limit

--- a/intro_to_flask/static/css/main.css
+++ b/intro_to_flask/static/css/main.css
@@ -109,6 +109,7 @@ form input#subject {
 }
 
 form textarea#message,
+form textarea#prompt,
 form textarea#userprompt,
 form textarea#systemprompt {
   width: 800px;
