--- a/intro_to_flask/static/css/main.css
+++ b/intro_to_flask/static/css/main.css
@@ -109,8 +109,10 @@ form input#subject {
 }
 
 form textarea#message,
-form textarea#prompt {
-  width: 500px;
+form textarea#prompt,
+form textarea#userprompt,
+form textarea#systemprompt {
+  width: 800px;
   height: 100px;
   background-color: #fafafa;
   -webkit-border-radius: 3px;  
