--- a/intro_to_flask/templates/speakme.html
+++ b/intro_to_flask/templates/speakme.html
@@ -6,7 +6,9 @@
 {% if success %}
 <p> <b> You asked me:  </b>"{{speak_me_prompt}}"  </p>
 <p> <b> How does this sound?:  </b> </p>
-<audio controls src="{{ url_for('static', filename = speak_me_response)}}"
+<audio controls>
+    <source src="{{ speak_me_response }}" type="audio/mpeg">
+
 </audio>
 {% else %}  
 {% for speak_me_prompt in form.prompt.errors %}
