created new dropdown menus for "Draw Me"

--- a/intro_to_flask/templates/drawme.html
+++ b/intro_to_flask/templates/drawme.html
@@ -21,6 +21,12 @@
             {{ form.prompt.label }}
             {{ form.prompt }}
 
+            {{ form.image_quality.label }}
+            {{ form.image_quality }}
+
+            {{ form.image_size.label }}
+            {{ form.image_size }}
+
             {{ form.submit }}
             <p> It will likely take a few seconds for the drawing to appear.   </p>
         </form>
