--- a/intro_to_flask/static/css/main.css
+++ b/intro_to_flask/static/css/main.css
@@ -131,7 +131,9 @@ form select#basic_systemprompt {
   font-size: 1.1em;
 }
 
-form select#gpt_model {
+form select#gpt_model,
+form select#image_quality,
+form select#image_size {
   width: 300px;
   height: 50px;
   background-color: #fafafa;
